# CADD-E

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  package.xml  setup.sh
UI/: package-lock.json  package.json
UI-App/UI/: package-lock.json  package.json
UI-App/UI/public/: index.html
UI-App/UI/src/: App.js  index.css  index.html  index.js  paths.js  test_routeXY_T.json
UI-App/UI/src/app/: App.js  Main.jsx  store.js
UI-App/UI/src/components/: Buttons.jsx  GoButton.jsx  Main.jsx  Map.jsx  Pyodide.jsx  Speedometer.jsx  StopButton.jsx  TeeCounter.jsx  Welcome.jsx  teeInfoSlice.js
UI-App/flask-server/: CMakeLists.txt  requirements.txt  server.py  setup.sh  test-subscriber.py  test.py
UI-App/flask-server/install/: local_setup.sh  setup.sh
UI-App/flask-server/install/py_pubsub/share/py_pubsub/: package.sh  package.xml
UI-App/flask-server/log/: latest_build  latest_test
UI-App/flask-server/py_pubsub/: setup.py
UI-App/flask-server/ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
UI-App/flask-server/ros2_ws/install/py_pubsub/lib/py_pubsub/: talker1  talker2
UI-App/flask-server/ros2_ws/install/py_pubsub/share/py_pubsub/: package.sh  package.xml
UI-App/flask-server/ros2_ws/log/: latest_build
UI-App/flask-server/ros2_ws/src/py_pubsub/: setup.py
UI-App/flask-server/ros2_ws/src/py_pubsub/py_pubsub/: bool_subscriber.py  go_publisher.py  publisher1_member_function.py  publisher2_member_function.py  publisher_member_function.py  string_subscriber.py  subscriber_member_function.py  tee_publisher.py
UI/src/: App.js  paths.js
UI/src/Data/: tees.js
UI/src/components/: Buttons.jsx  GoButton.jsx  Main.jsx  Map.jsx  RoutingControl.jsx  Speedometer.jsx  StopButton.jsx  TeeCounter.jsx  Welcome.jsx
custom_darknet/: darknet  prediction.txt  prediction2.txt  prediction3.txt  test.c
custom_darknet/examples/: art.c  detector-scipy-opencv.py
custom_darknet/python/: darknet.py
custom_darknet/src/: demo.c  image.c
doc/sprint1/req10/: README.md
doc/sprint1/req11/: README.md
doc/sprint1/req12/: req12.txt
doc/sprint1/req13/: README.md
doc/sprint1/req2/: purchase.xlsx
doc/sprint1/req4/: req4.txt
doc/sprint1/req8/: req8.txt
doc/sprint10/req1/: README.md
doc/sprint10/req10/: README.md  testPathPlanner.cpp
doc/sprint10/req2/: README.md
doc/sprint10/req3/: README.md
doc/sprint10/req5/: req5.txt
doc/sprint10/req8/: README.md
doc/sprint10/req9/: README.md
doc/sprint11/req10/: README.md
doc/sprint11/req2/: README.md
doc/sprint11/req3/: README.md
doc/sprint11/req4/: README.md
doc/sprint11/req6/: requirement.txt
doc/sprint11/req7/: README.md
doc/sprint11/req8/: req8.txt
doc/sprint11/req9/: README.md
doc/sprint12/req1/: README.md
doc/sprint12/req2/: README.md
doc/sprint12/req3/: README.md
doc/sprint12/req4/: README.md  imu_publisher.py  qwiic_imu.py
doc/sprint12/req5/: req5.txt
doc/sprint12/req8/: README.md
doc/sprint13/req10/: README.md
doc/sprint13/req11/: IMG_8498.HEIC
doc/sprint13/req3/: README.md
doc/sprint13/req4/: README.md
doc/sprint13/req5/: README.md
doc/sprint13/req6/: README.md
doc/sprint13/req7/: README.md
doc/sprint13/req8/: README.md
doc/sprint13/req9/: README.md
doc/sprint2/req10/: readme.md
doc/sprint2/req2/: req2.md
doc/sprint2/req3/: req3.md
doc/sprint2/req4/: req4.txt  requirements.txt
doc/sprint2/req4/log/GPS/: GPS_log_2022-10-11_16:03:21.581201.txt  nmea_2022-10-11_16:03:21.581201.txt
doc/sprint2/req5/: IMG_4116.heic
doc/sprint2/req7/: req7.md
doc/sprint2/req8/: readme.md
doc/sprint2/req9/: readme.md
doc/sprint3/req1/: README.md
doc/sprint3/req10/: README.md
doc/sprint3/req13/: README.md
doc/sprint3/req2/: README.md
doc/sprint3/req3/: req3.txt
doc/sprint3/req4/: README.md
doc/sprint3/req5/: req5.md
doc/sprint3/req6/: req6.md
doc/sprint3/req7/: req7.md
doc/sprint3/req8/: req8.md
doc/sprint3/req9/: README.md
doc/sprint4/req1/: req1.md
doc/sprint4/req10/: README.md
doc/sprint4/req11/: readme.md
doc/sprint4/req12/: readme.md
doc/sprint4/req13/: req13.md
doc/sprint4/req14/: req14.md
doc/sprint4/req3/: README.md
doc/sprint4/req8/: README.md
doc/sprint5/deepracer/: README.md
doc/sprint5/req6/: readme.md
doc/sprint5/req7/: README.md
doc/sprint6/req1/: req1.md
doc/sprint6/req2/: req2.txt
doc/sprint6/req3/: README.md  deepracer_test.mov
doc/sprint7/req3/: README.md
doc/sprint7/req4/: README.md
doc/sprint7/req5/: README.md
doc/sprint7/req7/: README.md
doc/sprint7/req8/: README.md
doc/sprint8/req1/: README.md  R_Tree_Test_Plot.py  r_tree_test.cpp
doc/sprint8/req2/: README.md
doc/sprint8/req3/: README.md
doc/sprint8/req4/: README.md
doc/sprint8/req5/: README.md
doc/sprint8/req8/: README.md
doc/sprint9/req3/: darknet_cpp_detection.cpp
doc/sprint9/req4/: README.md
doc/sprint9/req5/: README.md
doc/sprint9/req5-alex/: README.md
doc/sprint9/req6/: README.md
doc/sprint9/req6-alex/: .README.md.swp  README.md
localization/: CMakeLists.txt  Map.hpp  routePlanner.cpp
localization/gps/: nmeapoller.py
localization/imu/: imu_poller.py
localization/maps/: lcc_adj_list_localized.mat  lcc_nodes_localized.mat
req14/: README.md  email.txt
req15/: README.md
req2/: README.md
req5/: req5.txt
req9/: README.md
scripts/deep_racer/: clean_logs.sh  deepracer_setup.sh  eth_setup.sh  kill_jobs.sh  start_ui.sh
scripts/pi/: eth_setup.sh  pi_setup.sh  run_sensors.sh
src/: CMakeLists.txt  main.cpp  pathPlanner.h  routePlanner.h  telemetry.h  testRoutePlanner.h
src/control/: README.md  controller.py  requirements.txt
src/control/src/interfaces/: CMakeLists.txt  package.xml
src/control/src/interfaces/msg/: ServoCtrlMsg.msg  State.msg
src/control/src/mpc/: package.xml  setup.py
src/control/src/mpc/mpc/: controller.py
src/localization/: CMakeLists.txt  Map.hpp  pathPlanner.cpp
src/localization/maps/: lcc_adj_list.mat  lcc_connected.mat  lcc_nodes.mat  lcc_nodes_localized.mat
