<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mpc</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="apgisi11@gmail.com">alex</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>interfaces</exec_depend>
  <exec_depend>deepracer_interfaces_pkg</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

  <exec_depend>python3-cvxpy</exec_depend>
</package>
